--- a/MovieHubFrontend/src/index.html
+++ b/MovieHubFrontend/src/index.html
@@ -7,6 +7,7 @@
   <title>MovieHub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
+<base href="/">
   <meta name="author" content="Themefisher">
   <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon">
   <link rel="icon" href="../assets/images/logo.png" type="image/x-icon">
